# PearToPear

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: README.md
examples/01/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h  chat.proto  client  client.cc  server  server.cc
examples/client_server_with_bd_1/: CMakeLists.txt
examples/client_server_with_bd_1/Testfiles/Testfiles1/: database.txt
examples/client_server_with_bd_1/Testfiles/Testfiles1/files/: test2.cpp
examples/client_server_with_bd_1/proto/: request.proto
examples/client_server_with_bd_1/src/: client.cpp  server.cpp
include/pear/cli/: commands.hpp
include/pear/db/: sqlite_database.hpp
include/pear/demon/: demon.hpp
include/pear/fs/: workspace.hpp
include/pear/net/: db_contract.hpp  db_types.hpp  fs_contract.hpp  master_service.hpp  node.hpp  remote_client.hpp  storage_service.hpp
proto/: p2p.proto
src/: main.cpp
src/pear/cli/: command_helpers.cpp  command_helpers.hpp  commands.cpp
src/pear/db/: db.cpp  db.hpp  db_init.hpp  models.hpp  repositories.cpp  repositories.hpp  schema.cpp  schema.hpp  sqlite.cpp  sqlite.hpp  sqlite_database.cpp
src/pear/demon/: demon.cpp
src/pear/fs/: fs.md  workspace.cpp  workspace.hpp
src/pear/net/: master_service.cpp  node.cpp  remote_client.cpp  storage_service.cpp
tests/pear/fs/: workspace_test.cpp
